# myRepo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  OpeniGameNoticeToUsers - 副本.md  OpeniGameNoticeToUsers.md  README.md  main.cpp
Qt/: CMakeLists.txt
Qt/Resources/: iGameQtMainWindow.qrc
Qt/Resources/UI/: filterDialog.ui  iGameQtMainWindow.ui  iGameQtMainWindow.ui.autosave  igStreamTracer.ui  igVector.ui  layerDialog.ui  layerDialog.ui.autosave
Qt/include/IQComponents/: igQtFilterDialogDockWidget.h  igQtModelDialogWidget.h  igQtModelListView.h  igQtModelTreeWidget.h  igQtProgressBarWidget.h  igQtPropertyTreeWidget.h  igQtTreePropertyBrowser.h  igQtTreeWidget.h
Qt/include/IQCore/: iGameFileDialog.h  igQtFileLoader.h  igQtMainWindow.h
Qt/include/IQWidgets/: igQtAnimationWidget.h  igQtColorBarWidget.h  igQtModelDrawWidget.h  igQtRenderWidget.h  igQtScalarViewWidget.h  igQtSearchInfoWidget.h  igQtStreamTracerWidget.h  igQtTensorWidget.h  igQtVectorWidget.h
Qt/src/IQComponents/: igQtAnimationTreeWidget_interpolate.cpp  igQtFilterDialogDockWidget.cpp  igQtModelDialogWidget.cpp  igQtModelListView.cpp  igQtProgressBarWidget.cpp  igQtPropertyTreeWidget.cpp  igQtTreePropertyBrowser.cpp  igQtTreeWidget.cpp
Qt/src/IQCore/: igQtAnimationVcrController.cpp  igQtFileLoader.cpp  igQtMainWindow.cpp
Qt/src/IQWidgets/: igQtAnimationWidget.cpp  igQtColorBarWidget.cpp  igQtModelDrawWidget.cpp  igQtModelInformationWidget.cpp  igQtRenderWidget.cpp  igQtScalarViewWidget.cpp  igQtStreamTracerWidget.cpp  igQtTensorWidget.cpp  igQtVectorWidget.cpp
iGameCore/: CMakeLists.txt
iGameCore/Core/CellModel/: iGameCell.h  iGameCellType.h  iGameEmptyCell.h  iGameFace.h  iGameHexahedron.h  iGameLine.h  iGamePolyLine.h  iGamePolygon.h  iGamePrism.h  iGamePyramid.h  iGameQuad.h  iGameTetra.h  iGameTriangle.h  iGameVolume.h
iGameCore/Core/Common/: iGameAbstractObject.h  iGameArrayObject.h  iGameAttribute.cpp  iGameAttributeData.h  iGameAttributeSet.cpp  iGameAttributeSet.h  iGameBox3.h  iGameByteSwap.cpp  iGameByteSwap.h  iGameCellArray.cpp  iGameCellArray.h  iGameCellLinks.h  iGameColorMap.cpp  iGameColorMap.h  iGameCommand.h  iGameDataArray.cpp  iGameDataArray.h  iGameDataBuffer.h  iGameEdgeTable.h  iGameElementArray.h  iGameFaceTable.h  iGameFilter.cpp  iGameFilter.h  iGameFlatArray.h  iGameIdArray.h  iGameIdList.h  iGameMarker.h  iGameMetadata.cpp  iGameMetadata.h  iGameObject.cpp  iGameObject.h  iGamePointFinder.h  iGamePointPicker.h  iGamePoints.cpp  iGamePoints.h  iGamePropertySet.cpp  iGamePropertySet.h  iGameScalarsToColors.cpp  iGameScalarsToColors.h  iGameSmartPointer.h  (+8 more)
iGameCore/Core/DataModel/: iGameCompositeDataObject.h  iGameDataCollection.h  iGameDataObject.cpp  iGameDataObject.h  iGameDataSource.h  iGameDrawObject.cpp  iGameDrawObject.h  iGameDrawableObject.cpp  iGameDrawableObject.h  iGamePointSet.cpp  iGamePointSet.h  iGameSourceData.h  iGameStructuredMesh.cpp  iGameStructuredMesh.h  iGameSurfaceMesh.cpp  iGameSurfaceMesh.h  iGameUnstructuredData.h  iGameUnstructuredMesh.cpp  iGameUnstructuredMesh.h  iGameVolumeMesh.cpp  iGameVolumeMesh.h  iGameVolumeMesh_2.cpp  iGameVolumeMesh_2.h
iGameCore/Core/FilterModel/: iGameController.cpp  iGameController.h  iGameFilter.cpp  iGameFilter.h  iGameStandardController.cpp  iGameStandardController.h  iGameStreamingController.cpp  iGameStreamingController.h
iGameCore/Filters/: AABB_Tree.cpp  AABB_Tree.h  MyFilter.cpp  MyFilter.h  N-PolyVector.cpp  N-PolyVector.h  iGameARAP.cpp  iGameARAP.h  iGameARAPMapping.cpp  iGameARAPMapping.h  iGameARAPTest.h  iGameBilateralNormalFiltering.cpp  iGameBilateralNormalFiltering.h  iGameCurvature.cpp  iGameCurvature.h  iGameDijistra.h  iGameFilterIncludes.h  iGameFilterPoints.h  iGameIncrementalRemeshing.h  iGameMST.h  iGameMVCMapping.h  iGameMorphing.h  iGameNPolyVectorFields.h  iGameOptimalDelaunayTriangulation.h  iGameOptimalShapeProxies.h  iGameSurfaceMeshFilterTest.h  iGameSurfaceSimplification.cpp  iGameSurfaceSimplification.h  iGameTutteMapping.h  iGameVolumeMeshFilterTest.h  iGameVonoroiDiagram.cpp  iGameVonoroiDiagram.h
iGameCore/Filters/Sources/: iGameLineTypePointsSource.cpp  iGameLineTypePointsSource.h  iGamePointsSource.h
iGameCore/Filters/StreamView/: iGameStreamBase.cpp  iGameStreamBase.h
iGameCore/Filters/TensorViewFilter/: iGameTensorRepresentation.cpp  iGameTensorRepresentation.h  iGameTensorWidgetBase.cpp  iGameTensorWidgetBase.h
iGameCore/Filters/VectorView/: iGameVectorBase.cpp  iGameVectorBase.h
iGameCore/Filters/VolumeMeshAlgorithm/: iGameTetraDecimation.h  iGameVolumeMeshClipper.cpp
iGameCore/Filters/iGameModelSurfaceFilters/: iGameAtomicMutex.h  iGameModelGeometryFilter.cpp  iGameModelGeometryFilter.h
iGameCore/Filters/iGameSubdivision/: iGameHexhedronSubdivision.cpp  iGameHexhedronSubdivision.h  iGameQuadSubdivision.cpp
iGameCore/IO/: iGameBase64Util.h  iGameFileIO.cpp  iGameFileIO.h  iGameFileReader.cpp  iGameFileReader.h  iGameFileWriter.cpp  iGameFileWriter.h  iGameINPReader.cpp  iGameINPReader.h  iGameMESHReader.cpp  iGameOBJReader.cpp  iGameOFFReader.cpp  iGamePLYReader.cpp  iGamePVDReader.cpp  iGamePVDReader.h  iGameVTKAbstractReader.cpp  iGameVTKAbstractReader.h  iGameVTKReader.cpp  iGameVTKReader.h  iGameVTMReader.cpp  iGameVTSReader.cpp  iGameVTSReader.h  iGameVTUReader.cpp  iGameVTUReader.h  iGameXMLFileReader.cpp  iGameXMLFileReader.h
iGameCore/IO/AbaqusODB/: iGameODBReader.cpp  iGameODBReader.h
iGameCore/IO/CGNS/: iGameCGNSReader.cpp  iGameCGNSReader.h
iGameCore/IO/FFMPEG/: iGameFFMPEGVideoWriter.cpp  iGameFFMPEGVideoWriter.h
iGameCore/IO/INP/: iGameINPReader.cpp  iGameINPReader.h
iGameCore/IO/MESH/: iGameMESHWriter.cpp  iGameMESHWriter.h
iGameCore/IO/VTK/: iGameVTKAbstractReader.cpp  iGameVTKAbstractReader.h  iGameVTKReader.cpp  iGameVTKReader.h  iGameVTKWriter.cpp  iGameVTKWriter.h
iGameCore/IO/VTK XML/: iGamePVDReader.cpp  iGameVTSReader.cpp  iGameVTSReader.h  iGameVTUReader.cpp
iGameCore/Rendering/Common/: RenderingMacro.h  Timer.h  iGameHandlePool.h  iGameRenderingMacro.h
iGameCore/Rendering/Core/: iGameAxes.cpp  (+23 more)
(+138 files in other folders)
